Wrong axis location on bones with custom widgets #65640

Closed
opened 2019-06-08 15:45:05 +02:00 by Piotr Adamowicz · 6 comments

System Information
Operating system: Win10
Graphics card: GF GTX1080Ti

Blender Version
Broken: 2.80, 749d53effd
Worked: 2.79b

With the bone axis display enabled, if the bone has a custom widget, the axis display is drawn at the wrong location.

  1. Open attached file.
  2. Note the position of the axis:
    bone axes.PNG
  3. Disable the custom widget
  4. Note the discrepancy.

bone axes.blend

**System Information** Operating system: Win10 Graphics card: GF GTX1080Ti **Blender Version** Broken: 2.80, 749d53effd58 Worked: 2.79b With the bone axis display enabled, if the bone has a custom widget, the axis display is drawn at the wrong location. 1. Open attached file. 2. Note the position of the axis: ![bone axes.PNG](https://archive.blender.org/developer/F7094484/bone_axes.PNG) 3. Disable the custom widget 4. Note the discrepancy. [bone axes.blend](https://archive.blender.org/developer/F7094476/bone_axes.blend)

Added subscriber: @MadMinstrel

Added subscriber: @MadMinstrel
Alexander Gavrilov was assigned by Sebastian Parborg 2019-06-17 11:12:39 +02:00
Alexander Gavrilov was unassigned by Dalai Felinto 2019-12-23 16:34:07 +01:00

Added subscriber: @angavrilov

Added subscriber: @angavrilov

This issue was referenced by 6f5ef60f1b

This issue was referenced by 6f5ef60f1b50fef4737b0530bee5c4770be24403

Added subscriber: @fclem

Added subscriber: @fclem

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-04-17 21:14:46 +02:00

This has been fixed by 6f5ef60f1b

This has been fixed by 6f5ef60f1b
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65640
No description provided.